# Ideasgrab-discord-bot

./: .flake8  .gitignore  README.md  handler.py  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: deploy.yml
src/: database.py  main.py
src/models/: idea.py
