[tool.poetry]
name = "ideasgrab-discord-bot"
version = "0.1.0"
description = ""
authors = ["Hyunwook Nam <hw0knam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
SQLAlchemy = "^1.4.42"
python-dotenv = "^0.21.0"
"discord.py" = "^2.0.1"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
